CHKN-139 tsoa를 사용한 swagger 문서 자동 생성 성공
